--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta http-equiv="Content-Language" content="en, pt-br" />
     
     <!-- Metatag de imagem social (para exibir uma imagem ao compartilhar o link em redes sociais) -->
-    <meta property="og:image" content="https://i.ibb.co/zbwqNTz/gf.gif" />
+    <meta property="og:image" content="https://i.postimg.cc/prDwVD6q/Design-sem.jpg" />
     
     <!-- Metatag de título social (para especificar o título ao compartilhar o link em redes sociais) -->
     <meta property="og:title" content="VRZ STUDIO | DEV JOBS " />
